fix fb-button alignment

--- a/modals/register/register-style.less
+++ b/modals/register/register-style.less
@@ -8,8 +8,12 @@
   width: 322px;
 }
 
+.fb-login-wrapper {
+  text-align: center;
+}
+
 .facebook-login-button {
-  margin-left: 80px;
+  margin-left: 7px;
   line-height: 72px;
   color: white;
   text-shadow: 0 -2px 1px rgba(0,0,0,0.4);
